refactor(all): imports, paths and types
- rearranged imports
- added some index.ts files
- added
common/interfaces path alias
- typed many 'any' types

Closes #8

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@app/*": ["src/*"]
+      "@app/*": ["src/*"],
+      "@interfaces/*": ["src/common/interfaces/*"],
     }
   }
 }
